# solar_system

./: CMakeLists.txt  README.md  common.cpp  common.h  date.h  main.cpp  object.cpp  object.h  resources.qrc  solar_system.h  system.cpp  system.h
qml/: main.qml
qml/components/: ActionButton.qml  CloseButton.qml  DateLabel.qml  SolarCanvas.qml  StartStopButton.qml
src/: common.cpp  common.h  date.cpp  date.h  object.cpp  object.h  solar_system.h  system.cpp  system.h  system_qt_wrapper.cpp  system_qt_wrapper.h  test_date.h
